# sentinel

./: .gitignore  COMMANDS.md  Dockerfile  Makefile  README.md  docker-compose.yml  generate_nb.py  generate_rl_nb.py  memo.md  pyproject.toml  requirements.txt  run.py
.local_scripts/: embed_csv_to_nb.py  generate_nb.py  generate_rl_nb.py
artifacts/training/: convergence_report.json  learning_curve.csv  sample_traces.csv
data/: export_signal_distributions.py  signal_distributions.csv  synthetic_generator.py  validate_distribution.py
docs/: KIVE_Intelligence_Brief.md  architecture.md  multimodal_live_evaluator.md
kive/shared/: app_factory.py  schemas.py
notebooks/: 01_signal_analysis.ipynb  02_rl_training.ipynb
scripts/: update_docs.py  visualize_mlflow.py
services/bes/: __init__.py  detector.py  main.py
services/ccs/: __init__.py  detector.py  main.py
services/fmd/: Dockerfile  detector.py  main.py  requirements.txt
services/lqa/: __init__.py  detector.py  main.py
services/mdc/: Dockerfile  detector.py  main.py  requirements.txt
services/orchestrator/: Dockerfile  env.py  main.py  requirements.txt  signal_client.py  train.py
services/rsl/: __init__.py  detector.py  main.py
services/svp/: Dockerfile  detector.py  main.py  requirements.txt
services/tav/: Dockerfile  detector.py  main.py
services/tsi/: Dockerfile  detector.py  main.py
tests/: conftest.py  test_bes.py  test_ccs.py  test_env.py  test_fmd.py  test_integration.py  test_lqa.py  test_mdc.py  test_rsl.py  test_svp.py  test_tav.py  test_tsi.py
tests/fixtures/: sample_profile.json
(+4 files in other folders)
